tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/001-solo-decl-assign.xxx
x := (a := ) => () { }

// @TODO This should yield the same error.
// x := (a:=) => () { }
